# fractal-renderer

./: '  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  examples.md
builder/: Cargo.toml
builder/src/: main.rs
calc/: Cargo.toml
calc/src/: lib.rs
screenshots/: mandelbrot-1000000x.avif
shader/: Cargo.toml
shader/src/: lib.rs
src/: compute.rs  gui.rs  lib.rs  main.rs
