[package]
name = "fractal-renderer"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "A stupidly fast paralell fractal renderer with support for Mandelbrot, any Julia set and Barnsley Ferns. Easily handles magnification over 1 milion."
readme = "README.md"
repository = "https://github.com/Icelk/fractal-renderer/"
license = "Apache-2.0 OR MIT"
keywords = ["fractal", "renderer", "mandelbrot", "julia"]
categories = ["algorithms", "command-line-utilities", "mathematics", "visualization"]

[lib]
crate-type = ["dylib", "lib"]

[workspace]
members = ["builder", "shader"]

[dependencies]
ravif = "0.8.8"
clap = "^3"
rayon = "^1.5"
rand = { version = "0.8.4", features = ["small_rng"] }

spirv-builder = { optional = true, git = "https://github.com/EmbarkStudios/rust-gpu", rev = "31e3fdb", default-features = false, features = ["watch", "use-compiled-tools"] }
futures = { optional = true, version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = { optional = true, version = "0.12", features = ["spirv"] }
winit = { optional = true, version = "0.26" }
strum = { optional = true, version = "0.23.0", default_features = false, features = ["std", "derive"] }

eframe = { optional = true, git = "https://github.com/emilk/egui/" }
image = { optional = true, version = "^0.23", default-features = false }

[features]
default = ["avif", "gui"]

# TODO: large change, since we'll have to move to not using ravif's RGB.
avif = []
# Run on the GPU
gpu = ["spirv-builder", "futures", "wgpu", "winit", "strum"]
gui = ["eframe", "image"]
