[package]
name = "fractal-renderer"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "A stupidly fast paralell fractal renderer with support for Mandelbrot, any Julia set and Barnsley Ferns. Easily handles magnification over 1 milion."
readme = "README.md"
repository = "https://github.com/Icelk/fractal-renderer/"
license = "Apache-2.0 OR MIT"
keywords = ["fractal", "renderer", "mandelbrot", "julia"]
categories = ["algorithms", "command-line-utilities", "mathematics", "visualization"]

[lib]
crate-type = ["dylib", "lib"]

[workspace]
members = ["calc"]

[dependencies]
calc = { version = "0.2", path = "calc", package = "fractal-renderer-calc" }
ravif = { optional = true, version = "0.8.8" }
clap = { version = "^3" }
rayon = { version = "^1.5" }
rand = { version = "0.8.4", features = ["small_rng"] }

eframe = { optional = true, git = "https://github.com/emilk/egui/" }
image = { optional = true, version = "^0.23", default-features = false }

[features]
default = ["avif", "gui"]

avif = ["ravif"]
gui = ["eframe", "image"]
