[package]
name = "wgpu-builder"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>", "Icelk <main@icelk.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu/", rev = "685c79a" , default-features = false }
