[package]
name = "compute-shader"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>", "Icelk <main@icelk.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu/", rev = "685c79a", features = ["glam"] }
# My crate
fractal-renderer-calc = { path = "../calc/", version = "0.2.0", features = ["spirv"] }
